--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,10 +1,12 @@
 h2 {
     text-align: center;
+    text-size-adjust: auto;
 }
 
 li {
-    padding-left: 20%;
+    padding-left: 3rem;
     text-wrap: wrap;
+    text-size-adjust: auto;
 }
 
 
